# Lidar_colorization

./: CMakeLists.txt  README.md  package.xml
data/: CF_short.yml
include/lidar_rgb_fusion/: fusion.hpp
src/: fusion.cpp
